fix small break on landing pages buttons

--- a/stylus/Flare/application.styl
+++ b/stylus/Flare/application.styl
@@ -71,6 +71,10 @@ section
     background-color: $white
     height: 92%
 
+    button, .button
+      width: auto
+
+
   &.tm-summary
     table
       border: 0
